--- a/Views/Users/UserManagement.cshtml
+++ b/Views/Users/UserManagement.cshtml
@@ -33,7 +33,7 @@
                 <div class="sort-container">
                     <select id="sortSelect" aria-label="Sort Users">
                         <option selected disabled>Sort by</option>
-                        <option value="asc">Name Ascending</option>
+                        <option value="asc">Nadddme Ascending</option>
                         <option value="desc">Name Descending</option>
                         <option value="email_asc">Email Ascending</option>
                         <option value="email_desc">Email Descending</option>
