--- a/Views/Dashboard/StudentDashboard.cshtml
+++ b/Views/Dashboard/StudentDashboard.cshtml
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Dashboard</title>
-    <link rel="stylesheet" href="~/css/StudentDashboard.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/tempDashboard.css" asp-append-version="true">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="~/js/studentDashboard.js"></script>
 
     <div class="background">
 </head>
