--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Apptivate_UQMS_WebApp.styles.css" asp-append-version="true" />
-    <link href="~/css/Sidebar.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/tempSidebar.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="~/Images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="~/Images/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="icon" href="~/Images/favicon-16x16.png" sizes="16x16" type="image/png" />
@@ -29,6 +29,8 @@
     <header>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMpCJO5h8Zk60pH04z5PsBtc6Y1pFl9JgpU6fAv" crossorigin="anonymous">
     </header>
+
+    <div class="layout-wrapper">
 
     <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
         <button id="sidebarToggle">
@@ -129,16 +131,17 @@
         </div>
     </nav>
 
-    <div class="container">
-        <main role="main" class="pb-3">
+        <div class="content-wrapper">
             @RenderBody()
-        </main>
+        </div>
     </div>
+
+
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/SidebarToggle.js" asp-append-version="true"></script>
+    <script src="~/js/Sidebar.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
